# ParallelRayTracer

./: CMakeLists.txt  LICENSE  README.md
include/: aabb.h  bvh.h  camera.h  image.h  material.h  primitive.h  ray.h  renderer.h  scene.h  vec3.h
results/: spheres.ppm
results/bench/: bench_t4_bvh_dynamic.ppm  benchmark.csv
scenes/: cornell.scene  many_spheres.scene  mesh_demo.scene  spheres.scene
scripts/: benchmark.py  run_examples.sh
src/: main.cpp  renderer.cpp  scene.cpp
